Search 1 findTotalSumOfPrice #1007